// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with custom text 1`] = `
<h3
  className="text-light"
  style={
    Object {
      "fontSize": "3rem",
      "fontWeight": "700",
    }
  }
>
  Hello World!
</h3>
`;

exports[`renders correctly with default text 1`] = `
<h3
  className="text-dark"
  style={
    Object {
      "fontSize": "1.25rem",
      "fontWeight": "400",
    }
  }
>
  Hello World!
</h3>
`;
